--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="yesterday">Yesterday: %1$s</string>
     <string name="tomorrow">Tomorrow: %1$s</string>
     <string name="date_is">Date is: %1$s</string>
+    <string name="not_available">N/A</string>
 </resources>
