--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="tomorrow">Tomorrow: %1$s</string>
     <string name="date_is">Date is: %1$s</string>
     <string name="not_available">N/A</string>
+    <string name="loading">Loading…</string>
 </resources>
